force-app/main/default/objects/Opportunity/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <precision>13</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>