force-app/main/default/objects/Opportunity/fields/Discount_expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Discount_expiration_Date__c</fullName>
    <label>Discount expiration Date</label>
    <type>Date</type>
</CustomField>