force-app/main/default/objects/Opportunity/fields/Prices__c.field-meta.xml
<CustomField>
    <fullName>Prices__c</fullName>
    <label>Prices</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Prices</valueSetName>
    </valueSet>
</CustomField>