force-app/main/default/objects/Opportunity/recordTypes/Deloitte_albania.recordType-meta.xml
<RecordType>
    <fullName>Deloitte_albania</fullName>
    <active>true</active>
    <businessProcess>Deloitte Technology</businessProcess>
    <label>Deloitte albania</label>
</RecordType>