force-app/main/default/objects/Opportunity/recordTypes/Deloitte_Audit.recordType-meta.xml
<RecordType>
    <fullName>Deloitte_Audit</fullName>
    <active>true</active>
    <businessProcess>Deloitte Audit</businessProcess>
    <label>Deloitte Audit</label>
</RecordType>