force-app/main/default/objects/Opportunity/recordTypes/Deloitte_Digital.recordType-meta.xml
<RecordType>
    <fullName>Deloitte_Digital</fullName>
    <active>true</active>
    <businessProcess>Deloitte Digital</businessProcess>
    <label>Deloitte Digital</label>
</RecordType>