force-app/main/default/objects/Opportunity/validationRules/Discount_exp_full.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_exp_full</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK( Discount_expiration_Date__c ) , FALSE, TRUE)</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Discount must be filled if Discount exp is filled</errorMessage>
</ValidationRule>