force-app/main/default/objects/Opportunity/validationRules/Discount_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT( ISBLANK( Discount__c ) ) , TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Discount_expiration_Date__c</errorDisplayField>
    <errorMessage>Something went wrong</errorMessage>
</ValidationRule>